--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "json": "json-server ./src/sportstore/data.js  -p 3500 -m ./src/sportstore/middleware.js"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "font-awesome": "^4.7.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.1",
+    "vuejs-logger": "^1.5.5",
+    "vuelidate": "^0.7.6",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -18,6 +27,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "faker": "^5.4.0",
+    "json-server": "^0.16.3",
+    "jsonwebtoken": "^8.5.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
