--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@tailwindcss/postcss7-compat": "^2.0.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "connect-history-api-fallback": "1.5.0",
     "core-js": "^3.6.5",
+    "express": "4.16.3",
     "font-awesome": "^4.7.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
