--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "connect-history-api-fallback": "1.5.0",
     "core-js": "^3.6.5",
     "express": "4.16.3",
+    "express-pino-logger": "^6.0.0",
     "font-awesome": "^4.7.0",
+    "pino": "^6.11.2",
+    "pino-pretty": "^4.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuejs-logger": "^1.5.5",
