adding makefile for automation deployment

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -3,7 +3,7 @@ RUN mkdir -p /usr/src/sportsstore
 COPY ./dist /usr/src/sportsstore/dist
 
 COPY ./src/sportstore/middleware.js /usr/src/sportsstore/
-COPY ./src/sportstore/data.json /usr/src/sportsstore/
+COPY ./data.json /usr/src/sportsstore/
 COPY ./server.js /usr/src/sportsstore/server.js
 COPY ./deploy-package.json /usr/src/sportsstore/package.json
 
